Calendly & Png imgs

--- a/index.css
+++ b/index.css
@@ -10,10 +10,23 @@ html {
   text-align: center;
 }
 
+#calendly {
+  background-image: url(img/calendly.png);
+  height: 64px;
+  width: 64px;
+}
+
+#linkedin {
+  background-image: url(img/linkedin.png);
+  height: 64px;
+  width: 64px;
+}
+
 .logo {
-  background-image: url(logo.jpg);
+  background-image: url(img/logo.png);
   background-size: 100% 100%;
   display: grid;
+  justify-content: center;
   width: -moz-available;
   width: -webkit-fill-available;
   height: -moz-available;
