--- a/index.css
+++ b/index.css
@@ -20,6 +20,8 @@ html {
   background-image: url(img/linkedin.png);
   height: 64px;
   width: 64px;
+  margin-left: 90px;
+  margin-bottom: -64px;
 }
 
 .logo {
